--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-commerce",
-  "homepage": "https://Deepanshu2906.github.io/eShop",
+  "homepage": "https://deepanshu2906.github.io/eShop/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
