--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-commerce",
+  "name": "eShop",
   "homepage": "https://deepanshu2906.github.io/eShop/",
   "version": "0.1.0",
   "private": true,
